--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">TODO</string>
+
+    <string-array name="addTaskActivitySpinner">
+        <item>Job</item>
+        <item>Shopping</item>
+        <item>Other</item>
+    </string-array>
 </resources>
